<resources>
    <string name="app_name">Till Bilim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress">Progress</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_in">Sign In</string>
    <string name="grammar_example">а, ы, о, у, ү, ө ,и ,э(е)</string>
    <string name="grammar_explanation">Кыска үндүүлөр:</string>
    <string name="dialog">Dialog</string>
    <string name="logoutTitle">Вы уверены, что хотите выйти из аккаунта? \n \n</string>
    <string name="cancel">Отмена</string>
    <string name="agreeLogout">Выйти</string>
</resources>
